Correction of errata for list.insert()
Corrected insert() function from inserting 0 to front of list to inserting 3 to index 0 of list

--- a/Digital World Python Cheat Sheet/10.009 Digital World Cheat Sheet.md
+++ b/Digital World Python Cheat Sheet/10.009 Digital World Cheat Sheet.md
@@ -115,7 +115,7 @@ ls1[0] = 1 # lists start at 0
 ls1[-1] = 4 # Gets the last element in the list
 
 # Insertion
-ls1.insert(0, 3) # Inserts 0 at the front of the list
+ls1.insert(0, 3) # Inserts 3 at index 0 in the list
 print(ls1) # [3, 1, 2, 3, 4]
 
 # Removal
