Corrected errata for OOP
Object improperly created, arguments not given as string.

--- a/Digital World Python Cheat Sheet/10.009 Digital World Cheat Sheet.md
+++ b/Digital World Python Cheat Sheet/10.009 Digital World Cheat Sheet.md
@@ -185,7 +185,7 @@ class car: 		# Declares a new type of class called 'car'
         self.make = make 	# Assigns arguments to become internal class attributes
         self.model = model
 
-chevy = car.(chevrolet, impala) # The arguments are parsed as per the the __ini__ func
+chevy = car('chevrolet', 'impala') # The arguments are parsed as per the the __ini__ func
 chevy.make # Returns chevrolet
 chevy.model # Returns impala
 ```
